--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,5 @@ django-cors-headers>=4.0.0
 python-dotenv>=1.0.0
 djangorestframework-simplejwt>=5.2.2
 Pillow>=9.0.0
+boto3>=1.26.0
+django-storages>=1.13.2
