--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "@types/xterm": "^2.0.3",
     "@xterm/addon-fit": "^0.10.0",
@@ -22,15 +23,16 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.4",
     "styled-components": "^6.1.19",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^8.56.0",
-    "@types/node": "^20.19.19",
+    "@types/node": "^20.19.21",
     "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
+    "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "@vitejs/plugin-react": "^4.2.1",
